--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -178,5 +178,6 @@
   "passwordTooShort": "Пароль должен быть не менее 6 символов",
   "createAccount": "Создать аккаунт",
   "haveAccount": "Уже есть аккаунт? Войти",
-  "add": "Добавить"
+  "add": "Добавить",
+  "selectDate": "Выберите дату"
 } 
