--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -50,7 +50,7 @@
   "warning": "Предупреждение",
   "info": "Информация",
   "loading": "Загрузка...",
-  "noTasks": "Нет задач",
+  "noTasks": "Нет активных задач",
   "noInternetConnection": "Нет подключения к интернету",
   "tryAgain": "Попробовать снова",
   "search": "Поиск",
@@ -179,5 +179,6 @@
   "createAccount": "Создать аккаунт",
   "haveAccount": "Уже есть аккаунт? Войти",
   "add": "Добавить",
-  "selectDate": "Выберите дату"
+  "selectDate": "Выберите дату",
+  "noCompletedTasks": "Нет выполненных задач"
 } 
